--- a/src/app/main/pages/report/report.component.scss
+++ b/src/app/main/pages/report/report.component.scss
@@ -19,6 +19,9 @@
         margin-bottom: 30px;
     }
     &__form{
+        &--input{
+            width: 350px;
+        }
         
     }
 }
@@ -48,4 +51,57 @@
 #toggle:checked + #boton {
 	background-image: url('../../../../assets/img/boton/btn2.png');
 	
-}
+ }
+
+
+ /* 
+  ##Dispositivo = Tablets de baja resolucion y telefnos Mobiles (horizontal)
+  ##Resolucion = B/w 481px to 767px
+*/
+
+@media (min-width: 481px) and (max-width: 767px) {  
+    .report{
+        margin-top: 50px;
+        &__title{
+            font-weight: bold;
+            font-size: 2.5em;
+            margin-bottom: 30px;
+        }
+        &__form{
+            &--input{
+                width: 350px;
+            }
+            
+        }
+    }
+    
+  }
+  
+  /* 
+    ##Dispositivo = Mayoria de telefonos moviles (vertical)
+    ##Resolucion = B/w 320px to 479px
+  */
+  
+  @media (min-width: 320px) and (max-width: 480px) {    
+    .report{
+        margin-top: 50px;
+        &__title{
+            font-weight: bold;
+            font-size: 2.5em;
+            margin-bottom: 30px;
+        }
+        &__form{
+            &--input{
+                width: 250px;
+            }
+            
+        }
+    }
+    
+  }
+
+
+    
+    
+
+ 
