--- a/src/app/main/pages/reports/dialogs/details-dialog/details-dialog.component.html
+++ b/src/app/main/pages/reports/dialogs/details-dialog/details-dialog.component.html
@@ -28,8 +28,7 @@
     <p><span style="font-weight: bold;">Usuario Reporte : </span>Juan Perez</p>
     
     <div style="text-align: center;margin: 15px;">
-        <img style="width: 300px; height: 200px;" src="../../../../../../../assets/img/camara.png"
-                            class="pointer" />
+        <img class="imge" src="../../../../../../../assets/img/camara.png"  />
     </div>
    
 </mat-dialog-content>
