--- a/src/app/main/pages/reports/dialogs/details-dialog/details-dialog.component.scss
+++ b/src/app/main/pages/reports/dialogs/details-dialog/details-dialog.component.scss
@@ -3,3 +3,32 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+.imge{
+    width: 300px;
+    height: 200px;
+}
+
+ /* 
+  ##Dispositivo = Tablets de baja resolucion y telefnos Mobiles (horizontal)
+  ##Resolucion = B/w 481px to 767px
+*/
+
+@media (min-width: 481px) and (max-width: 767px) {  
+    .imge{
+        width: 200px;
+        height: 150px;
+    }
+}
+
+/* 
+  ##Dispositivo = Mayoria de telefonos moviles (vertical)
+  ##Resolucion = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {    
+    .imge{
+        width: 150px;
+        height: 100px;
+    }
+}
