--- a/src/app/main/pages/reporte/reporte.component.html
+++ b/src/app/main/pages/reporte/reporte.component.html
@@ -7,17 +7,19 @@
     <div class="body-container">
         <div class="report">
             <h1 class="report__title">Reportar</h1>
-            <form action="" [formGroup]="reportForm" autocomplete="off" class="form" >
+            <form action="" [formGroup]="reportForm" autocomplete="off" class="report__form" >
                 <p style="margin-left: 0px;">OT CHILD Número </p>
-                <mat-form-field appearance="outline" id="result" style="width: 350px;"> 
+                <mat-form-field appearance="outline" id="result" class="report__form--input"> 
                     <mat-label>Tipo de problema</mat-label>
-                    <input matInput placeholder="Tipo de problema" formControlName="typeProblem"/>
+                    <mat-select  formControlName="typeProblem">
+                        <mat-option *ngFor="let item of typeProblem" [value]="item.name">{{item.name}}</mat-option>
+                    </mat-select>
                     <mat-error *ngIf="reportForm.controls['typeProblem'].errors">
                         Campo <strong>requerido.</strong>
                     </mat-error>
                 </mat-form-field>
                 <br/>
-                <mat-form-field appearance="outline" id="result" style="width: 350px;"> 
+                <mat-form-field appearance="outline" id="result" class="report__form--input"> 
                     <mat-label>Descripcion</mat-label>
                     <textarea matInput placeholder="Descripcion" formControlName="descripcion">
 
@@ -26,9 +28,9 @@
                         Campo <strong>requerido.</strong>
                     </mat-error>
                 </mat-form-field>
-                <div>
+                <div >
                     <img src='../../../../../../../assets/img/camara.png'
-                class="pointer" style="width: 300px; height: 200px;"/>
+                   class="report__form--img" />
                 <br/>
 
                 </div>
