--- a/src/app/main/pages/reports/dialogs/return-dialog/return-dialog.component.html
+++ b/src/app/main/pages/reports/dialogs/return-dialog/return-dialog.component.html
@@ -13,9 +13,9 @@
     <mat-divider></mat-divider>
 </h2>
 <mat-dialog-content class="mat-typography" style="color: gray;">
-    <form [formGroup]="detailsForm" autocomplete="off" class="form-container" style="margin-left: 15px;" >
+    <form [formGroup]="detailsForm" autocomplete="off" class="form" style="margin-left: 15px;" >
         <div class="form-container__form-inputs">
-            <mat-form-field appearance="outline" id="result" style="width: 400px;"> 
+            <mat-form-field appearance="outline" id="result" class="form__input" > 
                 <mat-label>Comentarios</mat-label>
                 <textarea matInput placeholder="Comentarios" formControlName="comments" ></textarea>
                 <mat-error *ngIf="detailsForm.controls['comments'].errors">
@@ -36,7 +36,7 @@
             <label [for]="i">
                 <mat-card class="mat-elevation-z0">
                     <img [src]="imgUpload" onError="this.src='../../../../../../../assets/img/camara.png'"
-                        class="pointer" style="width: 300px; height: 200px;"/>
+                        class="image" />
                     <mat-card-actions *ngIf="imgUpload" align="end">
                         <button mat-icon-button >  <!-- (click)="deleteImage(imgForDelete, i)" -->
                              <mat-icon color="warn">delete</mat-icon>
