--- a/src/app/main/pages/dashboard/dashboard.component.html
+++ b/src/app/main/pages/dashboard/dashboard.component.html
@@ -85,7 +85,7 @@
                     <div class="container2__taller--cards-card" (click)="reports()">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p style="font-family: 'Poppins', sans-serif; font-size: 1.5em;">
+                            <p class="container2__taller--cards-name">
                             nombre de taller
                             </p>  
                         </div>
@@ -94,7 +94,7 @@
                     <div class="container2__taller--cards-card" (click)="reports()">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p style="font-family: 'Poppins', sans-serif; font-size: 1.5em;">
+                            <p class="container2__taller--cards-name">
                             nombre de taller
                             </p>  
                         </div>
@@ -103,7 +103,7 @@
                     <div class="container2__taller--cards-card" (click)="reports()">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p style="font-family: 'Poppins', sans-serif; font-size: 1.5em;">
+                            <p class="container2__taller--cards-name">
                             nombre de taller
                             </p>  
                         </div>
@@ -112,7 +112,7 @@
                     <div class="container2__taller--cards-card" (click)="reports()">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p style="font-family: 'Poppins', sans-serif; font-size: 1.5em;">
+                            <p class="container2__taller--cards-name">
                             nombre de taller
                             </p>  
                         </div>
@@ -121,7 +121,7 @@
                     <div class="container2__taller--cards-card" (click)="reports()">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p style="font-family: 'Poppins', sans-serif; font-size: 1.5em;">
+                            <p class="container2__taller--cards-name">
                             nombre de taller
                             </p>  
                         </div>
@@ -130,7 +130,7 @@
                     <div class="container2__taller--cards-card" (click)="reports()">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p style="font-family: 'Poppins', sans-serif; font-size: 1.5em;">
+                            <p class="container2__taller--cards-name">
                             nombre de taller
                             </p>  
                         </div>
@@ -139,7 +139,7 @@
                     <div class="container2__taller--cards-card" (click)="reports()">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p style="font-family: 'Poppins', sans-serif; font-size: 1.5em;">
+                            <p class="container2__taller--cards-name">
                             nombre de taller
                             </p>  
                         </div>
@@ -148,7 +148,43 @@
                     <div class="container2__taller--cards-card" (click)="reports()">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
-                            <p style="font-family: 'Poppins', sans-serif; font-size: 1.5em;">
+                            <p class="container2__taller--cards-name">
+                            nombre de taller
+                            </p>  
+                        </div>
+                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
+                    </div>
+                    <div class="container2__taller--cards-card" (click)="reports()">
+                        <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
+                            <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
+                            <p class="container2__taller--cards-name">
+                            nombre de taller
+                            </p>  
+                        </div>
+                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
+                    </div>
+                    <div class="container2__taller--cards-card" (click)="reports()">
+                        <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
+                            <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
+                            <p class="container2__taller--cards-name">
+                            nombre de taller
+                            </p>  
+                        </div>
+                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
+                    </div>
+                    <div class="container2__taller--cards-card" (click)="reports()">
+                        <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
+                            <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
+                            <p class="container2__taller--cards-name">
+                            nombre de taller
+                            </p>  
+                        </div>
+                        <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
+                    </div>
+                    <div class="container2__taller--cards-card" (click)="reports()">
+                        <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
+                            <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
+                            <p class="container2__taller--cards-name">
                             nombre de taller
                             </p>  
                         </div>
