--- a/src/app/main/pages/report/report.component.scss
+++ b/src/app/main/pages/report/report.component.scss
@@ -28,7 +28,8 @@
 
 .btn{
     background:transparent;
-    border: none;
+    border: 1px solid white;
+
 }
 .btn:active{
     background:transparent;
