:bug: fix autocomplet

--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
@@ -36,7 +36,7 @@
                     <mat-label>Resultado</mat-label>
                     <input matInput placeholder="Resultado" formControlName="result" [matAutocomplete]="auto">
                     <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-                        <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                        <mat-option *ngFor="let option of filteredOptions | async" [value]="option.resultType">
                             {{option.resultType}}
                         </mat-option>
                     </mat-autocomplete>
