--- a/src/app/main/pages/record/record.component.html
+++ b/src/app/main/pages/record/record.component.html
@@ -132,5 +132,11 @@
         </mat-paginator>
         
     </div>
+    <div class="footer-container">
+      <button mat-button (click)="download()" 
+      class="footer-container__download">
+        DESCARGAR
+      </button>
+</div>
     
 </div>
