--- a/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-setting-dialog/requests-setting-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-setting-dialog/requests-setting-dialog.component.html
@@ -3,33 +3,37 @@
     <h2 mat-dialog-title style="display: flex; padding-bottom: 0px;margin-bottom: 0px;">
         <div style="margin-top: 5px; margin-right: 15px;" mat-dialog-close>
             <mat-icon mat-list-icon>settings</mat-icon>
-        </div> 
-        Configuraciones 
-        
-        <div  mat-dialog-close style="margin-top: 5px; margin-left: 220px;cursor: pointer;"  >
-            <mat-icon >clear</mat-icon>
-        </div>        
+        </div>
+        Configuraciones
+
+        <div mat-dialog-close style="margin-top: 5px; margin-left: 220px;cursor: pointer;">
+            <mat-icon>clear</mat-icon>
+        </div>
     </h2>
     <mat-divider></mat-divider>
     <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
-        <mat-dialog-content style="margin-top: 20px;">
-            <p style="text-align: center;">Tiempo máximo en solicitud (hh:mm)</p>
-            <div>
-                <form [formGroup]="timerFormGroup" class="timer-container">
-                    <mat-form-field class="timer">
-                        <input matInput type="number" min="0" formControlName="hours" autocomplete="off" required>
-                    </mat-form-field>
-                    <span class="timer puntos"> : </span>
-                    <mat-form-field class="timer">
-                        <input matInput type="number" min="0" formControlName="minutes" autocomplete="off" required>    
-                    </mat-form-field>
-                </form>
-            </div>
-           
-        </mat-dialog-content>
-        <mat-dialog-actions align="end">
-            <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-            <button type="button" mat-raised-button color="primary" class="footer__btn-save" (click)="save()">GUARDAR</button>
-        </mat-dialog-actions>
-</div> 
+    <mat-dialog-content style="margin-top: 20px;" *ngIf="generalConfig$ | async">
+        <p style="text-align: center;">Tiempo máximo en solicitud (días:hh:mm)</p>
+        <div>
+            <form [formGroup]="timerFormGroup" class="timer-container">
+                <mat-form-field class="timer">
+                    <input matInput type="number" min="0" formControlName="days" autocomplete="off" required>
+                </mat-form-field>
+                <span class="timer puntos"> : </span>
+                <mat-form-field class="timer">
+                    <input matInput type="number" min="0" formControlName="hours" autocomplete="off" required>
+                </mat-form-field>
+                <span class="timer puntos"> : </span>
+                <mat-form-field class="timer">
+                    <input matInput type="number" min="0" formControlName="minutes" autocomplete="off" required>
+                </mat-form-field>
+            </form>
+        </div>
 
+    </mat-dialog-content>
+    <mat-dialog-actions align="end">
+        <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
+        <button type="button" mat-raised-button color="primary" class="footer__btn-save"
+            (click)="save()">GUARDAR</button>
+    </mat-dialog-actions>
+</div>
