🚧 report 2 step in andOn

--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -172,6 +172,13 @@
                 Historial
               </span>
             </a>
+            <a mat-list-item class="mat-list-item-second" [routerLink]="['/main/andon-settings']"
+              routerLinkActive="active" (click)="drawer.toggle()">
+              <mat-icon mat-list-icon class="mat-icon-menu">settings</mat-icon>
+              <span class="mat-item-list-span">
+                Configuraciones
+              </span>
+            </a>
           </div>
         </mat-nav-list>
       </mat-expansion-panel>
