--- a/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.scss
+++ b/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.scss
@@ -19,12 +19,19 @@
         margin-bottom: 30px;
     }
     &__form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         &--input{
             width: 350px;
         }
         &--img{
             width: 300px; 
             height: 200px;
+        }
+        &--card{
+            width: 400px; 
+            height: 250px;
         }
         
     }
